--- a/NavigationProblem/Components/Pages/Home.razor
+++ b/NavigationProblem/Components/Pages/Home.razor
@@ -3,3 +3,5 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<a href="https://apps.apple.com/app/satisfit/id1670558703" target="_blank">Open external link</a>
